--- a/client/src/screens/SignIn/SignIn.css
+++ b/client/src/screens/SignIn/SignIn.css
@@ -1,8 +1,3 @@
-.form-container-sign-in{
-  background-color: #82B0A2;
-
-}
-
 .sign-in-header{
   color: #1A2C38;
   text-align: center;
