--- a/client/src/screens/SignUp/SignUp.css
+++ b/client/src/screens/SignUp/SignUp.css
@@ -1,11 +1,3 @@
-.form-container-sign-up{
-  background-color: #82B0A2;
-
-  /* Hacky for now */
-  height: 100%;
-
-}
-
 .sign-up-header{
   color: #1A2C38;
   text-align: center;
